plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

javafx {
    version = "25"
    modules = [
        'javafx.base',
        'javafx.graphics',
        'javafx.controls',
        'javafx.fxml',
        'javafx.media',
        'javafx.web',
        'javafx.swing'
    ]
}

dependencies {

    implementation("com.mysql:mysql-connector-j:9.5.0")

    implementation("commons-logging:commons-logging:1.3.4")

    implementation("commons-beanutils:commons-beanutils:1.10.1")
    implementation("commons-collections:commons-collections:3.2.2")
    implementation("commons-digester:commons-digester:2.1")

    implementation("net.sf.jasperreports:jasperreports:7.0.6") {
        exclude group: "xml-apis"
        exclude group: "org.apache.xmlgraphics"
        exclude group: "batik"
    }

    implementation("net.sf.jasperreports:jasperreports-pdf:7.0.6") {
        exclude group: "xml-apis"
        exclude group: "org.apache.xmlgraphics"
        exclude group: "batik"
    }

    implementation("net.sf.jasperreports:jasperreports-charts:7.0.6") {
        exclude group: "xml-apis"
        exclude group: "org.apache.xmlgraphics"
        exclude group: "batik"
    }

    implementation("net.sf.jasperreports:jasperreports-fonts:7.0.6") {
        exclude group: "xml-apis"
        exclude group: "org.apache.xmlgraphics"
        exclude group: "batik"
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

application {
    mainClass = 'proyectoDesarrollo.Main'
    applicationDefaultJvmArgs = [
        "--enable-native-access=javafx.graphics"
    ]
}

sourceSets {
    main {
        resources {
            srcDirs = ["src/main/resources"]
            includes = [
                "**/*.fxml",
                "**/*.png",
                "**/*.jpg",
                "**/*.jpeg",
                "**/*.gif",
                "**/*.css",
                "**/*.jasper",
                "**/*.properties"
            ]
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.register('copyDependencies', Copy) {
    from configurations.runtimeClasspath
    into "$buildDir/libs/lib"
}

tasks.jar {
    dependsOn copyDependencies
    
    manifest {
        attributes(
            'Main-Class': application.mainClass.get(),
            'Class-Path': configurations.runtimeClasspath.files.collect { "lib/" + it.name }.join(' ')
        )
    }
}